<resources>
    <string name="app_name">INK Qtum</string>
    <string name="dialog_msg_please_wait">Please wait</string>
    <string name="restore_my_wallet">Restore My Wallet</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="ink_wallet">Ink wallet</string>
    <string name="welcome_to">Welcome to</string>
    <string name="copyright_ink_labs_foundation">Copyright@Ink labs Foundation</string>
    <string name="terms_of_usage">Terms of Usage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_your_seeds">Input your seeds</string>
    <string name="create_ink_wallet">Create INK Wallet</string>
    <string name="restore_ink_wallet">Restore INK Wallet</string>
    <string name="next">Next</string>
    <string name="about_the_seeds">About the seeds:\nSeeds is a character string used to generate random address. You can input anything you like here.
    And you have not been to remember it. Be aware that you can not get the same address even though
     input the same seeds here.</string>
    <string name="set_your_pin">Set your PIN</string>
    <string name="about_the_pin">About the PIN:\nPIN is a six-digit-number used to unlock this wallet address for INK wallet
     app. It is not related with your web-wallet-PIN. Each time when you log out, you have to reset it.</string>
    <string name="here_is_your_wallet_address">Here is your wallet address and mnemonics</string>
    <string name="wallet_address_is_the_identity_of_your_wallet">Wallet address is the identity of your wallet.
    You can tell it to others.
    Mnemonics is used to restore your wallet in other devices ore in the case of logging out. Ink will
     not save your mnemonics, so you can not re-get it after losing…\n
    Do Remember Your Mnemonics and don\'t share them with anyone…</string>
    <string name="copy_mnemonics">Copy Mnemonics</string>
    <string name="start_my_ink_wallet">Start My INK Wallet</string>
    <string name="menu_title_scan_code">Scan code</string>
    <string name="menu_title_qa">Q&amp;A</string>
    <string name="menu_title_feedback">Feedback</string>
    <string name="menu_title_terms_of_usage">Terms of Usage</string>
    <string name="menu_title_version_inform">Version inform</string>
    <string name="menu_title_language">Language</string>
    <string name="btn_log_out">Log out</string>
    <string name="backup">Backup</string>
    <string name="btn_receive">Receive</string>
    <string name="btn_send">Send</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="address">address</string>
    <string name="input_your_mnemonics">Input your mnemonics below to restore your wallet</string>
    <string name="title_backup">Backup</string>
    <string name="mnemonics_backup_text">Mnemonics are used to restore your wallet in other devices or when you log out. Be aware them just for yourself.</string>
    <string name="copy_mnemonics_attention_content">Copy mnemonics and save them digitally may cause security risks.\n\nWe strongly suggest you write them down, without relying on any network service and digit devices.</string>
    <string name="btn_still_copy">Still copy</string>
    <string name="btn_give_up">Give up</string>
    <string name="qtum">Qtum</string>
    <string name="toolbar_title_details">Details</string>
    <string name="transaction_history">Transaction history</string>
    <string name="et_hint_from">From:</string>
    <string name="et_hint_to">To:</string>
    <string name="et_hint_fees">Fees:</string>
    <string name="et_hint_description">Description:</string>
    <string name="et_hint_tx_hash">Tx hash:</string>
    <string name="et_hint_block_height">Block height:</string>
    <string name="et_hint_time_stamp">Time stamp:</string>
    <string name="toolbar_title_receive">Receive</string>
    <string name="btn_copy_address">Copy address</string>
    <string name="copy_succeed">Copy Succeed!</string>
    <string name="logout_dialog_content">You can not access to this wallet if you don\'t write down your mnemonics.</string>
    <string name="btn_go_to_backup">Go to Backup</string>
    <string name="title_warning">Warning</string>
    <string name="btn_next">Next</string>
    <string name="send_title_address">Address:</string>
    <string name="send_title_address_hint_">Input address, long press to paste</string>
    <string name="send_amount_title">Amount:</string>
    <string name="send_description_title">Description:</string>
    <string name="send_fees_title">Fees:</string>
    <string name="send_checkbox_standard">Standard</string>
    <string name="send_checkbox_custom">Custom</string>
    <string name="send_tx_speed_slow">Slow</string>
    <string name="send_tx_speed_quick">Quick</string>
    <string name="toolbar_title_send">Send</string>
    <string name="btn_confirm">Confirm</string>
    <string name="send_fees_receiver_address">Other party\'s address:</string>
    <string name="transfer_fail">Transfer Fail!</string>
    <string name="succeeded">Succeeded!</string>
    <string name="loading_transactions">Loading transactions</string>
    <string name="invalid_qtum_address">Invalid QTUM Address</string>
    <string name="max_amount">Max amount:</string>
    <string name="amout_cant_be_more_balance">Amount can\'t be more then balance</string>
    <string name="wrong_qtum_address">Wrong QTUM address</string>
    <string name="dust_transaction">Dust transaction</string>
    <string name="toolbar_title_feedback">Feedback</string>
    <string name="toolbar_title_q_and_a"><![CDATA[Q&A]]></string>
    <string name="toolbar_title_terms_of_usage">Terms of Usage</string>
    <string name="toolbar_title_version_inform">Version Inform</string>
    <string name="toolbar_title_language">Language</string>


    <string name="terms_of_usage_text">
        <![CDATA[
        <p><strong>1. Who May Use the Services</strong><br/>You may use the Services only if you agree to form a binding contract with Twitter and are not a person barred from receiving services under the laws of the applicable jurisdiction. In any case, you must be at least 13 years old to use the Services. If you are accepting these Terms and using the Services on behalf of a company, organization, government, of other legal entity, you represent and warrant that you are authorized to do so.</p>
        <p><strong>2. Privacy</strong><br/>You may use the Services only if you agree to form a binding contract with Twitter and are not a person barred from receiving services under the laws of the applicable jurisdiction. In any case, you must be at least 13 years old to use the Services</p>
        <p><strong>3. Content on the Services</strong><br/>You are responsible for your use of the Services and for any Content you provide, including compliance with applicable laws, rules.</p>
        ]]>
    </string>
    <string name="ink">INK</string>
    <string name="insufficient_fee_lease_use_minimum_of">Insufficient fee. Please use minimum of</string>
    <string name="confirm_your_pin">Confirm your PIN</string>
    <string name="input_pin_to_unlock">Input your PIN to unlock</string>
    <string name="input_pin_to_backup">Input your PIN to backup</string>
    <string name="btn_done">Done</string>
</resources>
