<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/menu_main"
            android:title="Main" />
    </group>
    <group>
        <item
            android:id="@+id/menu_lang"
            android:title="@string/menu_title_language" />
    </group>
    <group>
        <item
            android:id="@+id/menu_qa"
            android:title="@string/menu_title_qa" />
    </group>
    <group>
        <item
            android:id="@+id/menu_feedback"
            android:title="@string/menu_title_feedback" />
    </group>
    <group>
        <item
            android:id="@+id/menu_terms_of_usage"
            android:title="@string/menu_title_terms_of_usage" />
    </group>
    <item
        android:id="@+id/menu_version_inform"
        android:title="@string/menu_title_version_inform" />

</menu>